--- a/vscode/.vscode/settings.json
+++ b/vscode/.vscode/settings.json
@@ -132,7 +132,7 @@
             ]
         },
         {
-            "before": "Ctrl+]",
+            "before": "Ctrl+\\",
             "after": [],
             "commands": [
                 {
