--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -153,13 +153,14 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
 set -g @resurrect-capture-pane-contents 'on'
 
-set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
 
-set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
 
 #set -g @catppuccin_status_modules_right "application session user date_time"
 set -g @catppuccin_status_modules_right "directory date_time session"
