--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -8,12 +8,12 @@
 // from the command palette or from `Zed` application menu.
 {
   "theme": "One Dark",
-  "features": {
-    "copilot": false
-  },
+  "buffer_font_family": "JetBrainsMonoNL Nerd Font",
   "ui_font_size": 19,
   "buffer_font_size": 19,
   "vim_mode": true,
-  "cursor_blink": false
+  "cursor_blink": false,
+  "base_keymap": "VSCode",
+  "relative_line_numbers": true
 }
 //
