--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,13 +7,26 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "One Dark",
+  "theme": "Rosé Pine Moon",
   "buffer_font_family": "JetBrainsMonoNL Nerd Font",
-  "ui_font_size": 19,
-  "buffer_font_size": 19,
+  "ui_font_size": 17,
+  "buffer_font_size": 17,
   "vim_mode": true,
   "cursor_blink": false,
   "base_keymap": "VSCode",
-  "relative_line_numbers": true
+  "relative_line_numbers": true,
+  "scrollbar": {
+    "show": "never"
+  },
+  "buffer_line_height": {
+    "custom": 1.5
+  },
+  "terminal": {
+    "font_family": "JetBrainsMonoNL Nerd Font",
+    "font_size": 15,
+    "line_height": {
+      "custom": 1.5
+    }
+  }
 }
 //
