--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -168,7 +168,7 @@ set -g @catppuccin_status_modules_right "directory date_time session"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_date_time_text "%H:%M"
 
 set -g escape-time 0             # zero-out escape time delay
