--- a/yazi/.config/yazi/theme.toml
+++ b/yazi/.config/yazi/theme.toml
@@ -199,6 +199,10 @@ rules = [
 
 [icon]
 
+prepend_rules = [
+    { name = "*", is = "orphan", text = "" },
+    { name = "*", is = "link", text = "" },
+]
 rules = [
     # Programming
     { name = "*.c", text = "", fg = "#599eff" },
