--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -415,6 +415,9 @@ keymap = [
         "<Esc>",
     ], run = "close", desc = "Hide the task manager" },
     { on = [
+        "q",
+    ], run = "close", desc = "Hide the task manager" },
+    { on = [
         "<C-c>",
     ], run = "close", desc = "Hide the task manager" },
     { on = [
