--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -210,10 +210,10 @@ keymap = [
     ], run = "search none", desc = "Cancel the ongoing search" },
     { on = [
         "z",
-    ], run = "jump zoxide", desc = "Jump to a directory using zoxide" },
+    ], run = "plugin zoxide", desc = "Jump to a directory using zoxide" },
     { on = [
         "Z",
-    ], run = "jump fzf", desc = "Jump to a directory, or reveal a file using fzf" },
+    ], run = "plugin fzf", desc = "Jump to a directory, or reveal a file using fzf" },
 
     # Linemode
     { on = [
@@ -397,6 +397,10 @@ keymap = [
         "g",
         "o",
     ], run = "cd ~/note/sigma", desc = "Go to the obsidian directory" },
+    { on = [
+        "g",
+        "v",
+    ], run = "cd ~/.config/nvim", desc = "Go to the nvim directory" },
     { on = [
         "g",
         "<Space>",
