--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -24,8 +24,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+#monitor=,preferred,auto,auto
+monitor=DP-1,3440x1440@144,0x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -59,6 +59,16 @@ $menu = wofi --show drun
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+
+#if hyprland is crashing ,try uncomment the code below
+
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = WLR_NO_HARDWARE_CURSORS,1
+
 
 
 #####################
