--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,9 +23,18 @@
 # │ keymap │
 # └────────┘
 # Custom Prefix
-unbind C-b
-set-option -g prefix `
-bind ` send-prefix
+#unbind C-b
+
+#set-option -g prefix `
+#bind ` send-prefix
+
+set-option -g prefix C-b
+set-option -g prefix2 `
+
+bind C-b send-prefix
+bind ` send-prefix -2
+
+
 
 bind h previous-window
 bind l next-window
