--- a/zsh/.config/zsh/.zsh_config
+++ b/zsh/.config/zsh/.zsh_config
@@ -12,6 +12,11 @@ setopt hist_save_no_dups
 setopt hist_ignore_dups
 setopt hist_find_no_dups
 
+#export HISTTIMEFORMAT='%F %T ' # add time timestamp for history
+export HISTTIMEFORMAT="%F %T"
+#HIST_STAMPS="yyyy-mm-dd hh:mm:ss"
+#export HISTTIMEFORMAT='%F %T ' # add time timestamp for history
+
 # Completion styling
 zstyle ':completion:*' matcher-list 'm:{a-z}={A-Za-z}'
 zstyle ':completion:*' list-colors "${(s.:.)LS_COLORS}"
