--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-1,3440x1440@144,0x0,1
+monitor=DP-1,3440x1440@144,0x0,1.25
 
 ###################
 ### MY PROGRAMS ###
@@ -50,8 +50,9 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar
+exec-once = waybar & hyprpaper
 
+#############################
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
