--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,8 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 16.0
+font_family JetBrains Mono
 
 #: Font size (in pts).
 
@@ -1158,7 +1159,7 @@
 
 #: The foreground and background colors.
 
-background_opacity 0.5
+background_opacity 0.60
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1182,7 +1183,7 @@ background_opacity 0.5
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 0
+background_blur 80
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1886,6 +1887,8 @@ background_opacity 0.5
 
 # map kitty_mod+v paste_from_clipboard
 # map cmd+v       paste_from_clipboard
+map alt+c copy_to_clipboard
+map alt+v paste_from_clipboard
 
 #: Paste from selection
 
