--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -49,6 +49,8 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar & hyprpaper
+exec-once = fcitx5 --replace -d
+exec-once = rofi
 
 #############################
 #############################
