--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -25,7 +25,7 @@
 #:     bold_italic_font Operator Mono Medium Italic
 
 font_size 14.0
-font_family JetBrains Mono
+font_family JetBrainsMono Nerd Font
 
 #: Font size (in pts).
 
