--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -89,7 +89,7 @@ source = ~/.config/hypr/conf/animation.conf
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
-general { 
+general {
     gaps_in = 5
     gaps_out = 20
 
@@ -100,7 +100,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -126,7 +126,7 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        
+
         vibrancy = 0.1696
     }
 }
@@ -159,7 +159,7 @@ master {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
+misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
@@ -209,6 +209,9 @@ device {
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+windowrule = float, ^(rofi)$
+windowrule = center, ^(rofi)$
+windowrule = size 800 500, ^(rofi)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
