--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = wofi --show drun
 
 exec-once = waybar & hyprpaper
 exec-once = fcitx5 --replace -d
-exec-once = rofi
+#exec-once = rofi
 
 #############################
 #############################
