--- a/hyprland/.config/hypr/conf/keybindings.conf
+++ b/hyprland/.config/hypr/conf/keybindings.conf
@@ -1,4 +1,16 @@
 source = ~/.config/hypr/conf/keybindings/default.conf
 
+#bind = $mainMod, Left, movefocus, l
+#bind = $mainMod, Right, movefocus, r
+#bind = $mainMod, Up, movefocus, u
+#bind = $mainMod, Down, movefocus,d
+
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus,d
+
+bind = Alt, Tab, movefocus, d
+
 
 
