--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,8 @@ source = ~/.config/hypr/conf/monitor.conf
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$file = dolphin
+$browser = chromium
 $menu = wofi --show drun
 
 
