--- a/hyprland/.config/hypr/conf/keybindings/default.conf
+++ b/hyprland/.config/hypr/conf/keybindings/default.conf
@@ -9,13 +9,13 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+#bind = $mainMod, left, movefocus, l
+#bind = $mainMod, right, movefocus, r
+#bind = $mainMod, up, movefocus, u
+#bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
