--- a/hyprland/.config/hypr/conf/keybindings.conf
+++ b/hyprland/.config/hypr/conf/keybindings.conf
@@ -12,7 +12,9 @@ bind = $mainMod, j, movefocus,d
 
 bind = Alt, Tab, movefocus, d
 
-bind = Alt, Space, exec, rofi -show drun
+bind = $mainMod, Space, exec, rofi -show drun
 
+bind = Alt, Space, exec, tofi-drun --drun-launch=true
 
+bind = $mainMod, F, fullscreen # Set active window to fullscreen
 
