add windowrule for Chroumium obsidian

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -214,6 +214,10 @@ windowrule = float, ^(rofi)$
 windowrule = center, ^(rofi)$
 windowrule = size 800 500, ^(rofi)$
 
+windowrule = workspace 1, ^(Chromium)$
+windowrule = workspace 2, ^(obsidian)$
+
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
