add hl key in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,6 +78,14 @@ unbind c-]
 
 # vim
 set-window-option -g mode-keys vi
+# 将大写 H 映射为跳到行首（0）
+bind-key -T copy-mode-vi H send -X start-of-line
+
+# 将大写 L 映射为跳到行尾（$）
+bind-key -T copy-mode-vi L send -X end-of-line
+
+
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
