--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,6 +84,9 @@ bind-key -T copy-mode-vi H send -X start-of-line
 # 将大写 L 映射为跳到行尾（$）
 bind-key -T copy-mode-vi L send -X end-of-line
 
+# 将大写 Y 映射为复制到行首
+bind-key -T copy-mode-vi Y send -X begin-selection \; send -X end-of-line \; send -X copy-selection-and-cancel
+
 
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
