--- a/nix/.config/nix/nix.conf
+++ b/nix/.config/nix/nix.conf
@@ -1,3 +1,10 @@
 experimental-features = nix-command flakes
 max-jobs = auto
 substituters = https://cache.nixos.org/ 
+allowed-users = *
+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://cache.nixos.org/
+trusted-substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://cache.nixos.org/
+trusted-users = root lawrence @wheel @sudo
+use-xdg-base-directories = true
+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= devenv.cachix.org-1:w1cLUi8dv3hnoSPGAuibQv+f9TZLr6cv/Hm9XgU50cw= freed-wu.cachix.org-1:St1DxyLd+yzhqKMSIrPQRmuFl+oH9VeTYCBaCbiJR0g= linyinfeng.cachix.org-1:sPYQXcNrnCf7Vr7T0YmjXz5dMZ7aOKG3EqLja0xr9MM=
