--- a/hyprland/.config/hypr/conf/keybindings.conf
+++ b/hyprland/.config/hypr/conf/keybindings.conf
@@ -10,6 +10,9 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus,d
 
+bind = $mainMod, F, fullscreenstate, 0, 3
+bind = $mainMod SHIFT, M, fullscreen, 0
+
 bind = Alt, Tab, movefocus, d
 
 bind = $mainMod, Space, exec, rofi -show drun
