--- a/nix/.config/nix/nix.conf
+++ b/nix/.config/nix/nix.conf
@@ -4,6 +4,6 @@ allowed-users = *
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 substituters = https://mirrors.tuna.tsinghua.edu.cn/nix-channels/store https://cache.nixos.org/
 trusted-substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://cache.nixos.org/
-trusted-users = root lawrence @wheel @sudo
+trusted-users = root lawrence sigma @wheel @sudo
 
 
