--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,9 +23,42 @@
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
+#
+#
+#
+#
+kitty_mod alt
 
-font_size 14.0
+map kitty_mod+n new_os_window
+
+map kitty_mod+t new_tab
+
+map shift+kitty_mod+] next_tab
+map shift+kitty_mod+[ previous_tab
+
+
+map kitty_mod+2 second_window
+map kitty_mod+3 third_window
+map kitty_mod+4 fourth_window
+map kitty_mod+5 fifth_window
+map kitty_mod+6 sixth_window
+map kitty_mod+7 seventh_window
+
+# map ctrl+left neighboring_window left
+# map ctrl+right neighboring_window right
+
+# map ctrl+shift+enter new_window_with_cwd
+# map ctrl+shift+t new_tab_with_cwd
+
+
+
+font_size 16.0
 font_family JetBrainsMono Nerd Font
+
+
+shell zsh
+
+
 
 #: Font size (in pts).
 
@@ -1183,7 +1216,7 @@ background_opacity 0.60
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_blur 80
+# background_blur 20
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
