--- a/nix/.config/nix/nix.conf
+++ b/nix/.config/nix/nix.conf
@@ -2,8 +2,9 @@ experimental-features = nix-command flakes
 max-jobs = auto
 allowed-users = *
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
-substituters = https://mirrors.tuna.tsinghua.edu.cn/nix-channels/store https://cache.nixos.org/
-trusted-substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://cache.nixos.org/
+substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://mirrors.tuna.tsinghua.edu.cn/nix-channels/store https://mirror.sjtu.edu.cn/nix-channels/store https://cache.nixos.org
+trusted-substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://mirrors.tuna.tsinghua.edu.cn/nix-channels/store https://mirror.sjtu.edu.cn/nix-channels/store https://cache.nixos.org
 trusted-users = root lawrence sigma @wheel @sudo
+
 
 
