--- a/nix/.config/nix/nix.conf
+++ b/nix/.config/nix/nix.conf
@@ -1,5 +1,8 @@
-experimental-features = nix-command flakes
+# Auto-scale builders
+auto-allocate-uids = true
 max-jobs = auto
+cores = 0
+experimental-features = nix-command flakes
 allowed-users = *
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 substituters = https://mirrors.ustc.edu.cn/nix-channels/store https://mirrors.tuna.tsinghua.edu.cn/nix-channels/store https://mirror.sjtu.edu.cn/nix-channels/store https://cache.nixos.org
