--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -2,15 +2,45 @@
 # foreground = ffffff
 #keybind = ctrl+j=toggle_quick_terminal
 cursor-style = block
-background = #000000
-background-opacity = 0.65
-background-blur-radius = 15
-
 
 theme = rose-pine
-font-size = 16
+background = #000000
+background-opacity = 0.65
+background-blur-radius = 20
+
+
 background-opacity = 0.8
-window-decoration = false
+
+cursor-style = block
+cursor-style-blink = false
+cursor-invert-fg-bg = true
+
+font-size = 16
+font-family = Maple Mono Regular
 
 
+macos-titlebar-style = hidden
+mouse-hide-while-typing = true
+
+
+confirm-close-surface = false
+window-decoration = true
+# window-padding-x = 10
+# window-padding-y = 10
+# window-padding-balance = true
+
+
+
+# Similar Tmux but with Ghostty
+# (ctrl b for tmux -> cmb b for ghostty)
+keybind = super+b>r=reload_config
+keybind = super+b>x=close_surface
+# this only works if you have `macos-titlebar-style = tabs or native or transparent`
+# else it behaves like new window
+keybind = super+b>c=new_tab 
+keybind = super+b>n=new_window
+
+# extras
+shell-integration-features = no-cursor 
+copy-on-select = clipboard
 
