--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -160,11 +160,11 @@ format = '[ $symbol( $version) ]($style)'
 
 [c]
 symbol = " "
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [rust]
 symbol = ""
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [golang]
 symbol = ""
@@ -173,21 +173,21 @@ detect_files = ["go.mod"]
 
 [php]
 symbol = ""
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [java]
 symbol = " "
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [kotlin]
 symbol = ""
 
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [haskell]
 symbol = ""
 
-format = '[[ $symbol( $version) ]]($style)'
+format = '[ $symbol( $version) ]($style)'
 
 [python]
 symbol = ""
