--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,7 +6,7 @@ cursor-style = block
 theme = rose-pine
 background = #000000
 background-opacity = 0.65
-background-blur-radius = 20
+background-blur-radius = 15
 
 
 background-opacity = 0.8
@@ -25,8 +25,8 @@ mouse-hide-while-typing = true
 
 confirm-close-surface = false
 window-decoration = false
-# window-padding-x = 10
-# window-padding-y = 10
+window-padding-x = 10
+window-padding-y = 10
 # window-padding-balance = true
 
 
