--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,204 +1,71 @@
-#  ██████████ ████     ████ ██     ██ ██     ██
-# ░░░░░██░░░ ░██░██   ██░██░██    ░██░░██   ██
-#     ░██    ░██░░██ ██ ░██░██    ░██ ░░██ ██
-#     ░██    ░██ ░░███  ░██░██    ░██  ░░███
-#     ░██    ░██  ░░█   ░██░██    ░██   ██░██
-#     ░██    ░██   ░    ░██░██    ░██  ██ ░░██
-#     ░██    ░██        ░██░░███████  ██   ░░██
-#     ░░     ░░         ░░  ░░░░░░░  ░░     ░░
-#
-#  ▓▓▓▓▓▓▓▓▓▓
-# ░▓ Author ▓ AK <abdullah@abdullah.today>
-# ░▓▓▓▓▓▓▓▓▓▓
-# ░░░░░░░░░░
+# ────────────────────────────────────────────────────────
+# │ Base Settings
+# ────────────────────────────────────────────────────────
+set -g default-command $SHELL
+set -g default-shell $SHELL
+set -g mouse on
+set -g base-index 1           # 窗口编号从 1 开始计数
+set -g escape-time 0          # 关闭 ESC 延时
+set -g history-limit 1000000  # 历史记录数
+set -g renumber-windows on    # 关闭窗口后重新编号
+set -g set-clipboard on       # 系统剪贴板
+set -g status-position top    # 状态栏置顶
 
-# my tmux
+# True Color 支持
+set -ga terminal-overrides ",*256col*:Tc"
 
-# source powerline 
-# source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
-
-# source .tmux-key.conf
-
-# ┌────────┐
-# │ keymap │
-# └────────┘
-# Custom Prefix
-#unbind C-b
-
-#set-option -g prefix `
-#bind ` send-prefix
-
+# ────────────────────────────────────────────────────────
+# │ Key Bindings  
+# ────────────────────────────────────────────────────────
 set-option -g prefix C-b
 set-option -g prefix2 `
 
 bind C-b send-prefix
 bind ` send-prefix -2
 
-
-
-bind h previous-window
+bind h previous-window 
 bind l next-window
-
-# Reload the config
-bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
-
-# command mode
+bind r source-file ~/.tmux.conf \; display "配置已重新加载"
 bind : command-prompt
-
-# Kill panes
 bind x kill-pane
-
-# Toggle Status 
 bind t set status
 
-# ┌────────┐
-# │ window │
-# └────────┘
+# 分割窗口
+bind b split-window -v -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind c new-window -c "#{pane_current_path}"
 
-unbind %
-unbind '"'
-bind b split-window -v -c '#{pane_current_path}' # 当前路径 垂直分割窗口
-bind v split-window -h -c '#{pane_current_path}' # 当前路径 水平分割窗口
-bind c new-window -c "#{pane_current_path}"      # 当前路径 新窗口
-
-unbind c-]
-
-
-
-
-#bind b split-window -v # 当前位置 垂直分割窗口
-#bind v split-window -h # 当前位置 水平分割窗口
-#
-# ┌────────┐
-# │ option │
-# └────────┘
-
-# 支持 utf-8
-#set -g status-utf8 on
-
-# vim
+# Vim 风格
 set-window-option -g mode-keys vi
-# 将大写 H 映射为跳到行首（0）
 bind-key -T copy-mode-vi H send -X start-of-line
-
-# 将大写 L 映射为跳到行尾（$）
 bind-key -T copy-mode-vi L send -X end-of-line
-
-# 将大写 Y 映射为复制到行首
 bind-key -T copy-mode-vi Y send -X begin-selection \; send -X end-of-line \; send -X copy-selection-and-cancel
-
-
-
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
-
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-
-# Shell
-set -g default-command $SHELL
-set -g default-shell $SHELL
-# Panes numbers
-set -g display-panes-active-colour colour20
-set -g display-panes-colour colour196
-
-
-# Enable mouse mode
-set -g mouse on
-
-set -g base-index 1 # set numbers start from 0
-
-set -qg mode-mouse on
-set -qg mouse-select-pane on
-set -qg mouse-resize-pane on
-set -qg mouse-select-window on
-
-set -q -g status-utf8 on
-setw -q -g utf8 on
-
-set -qg mouse on
-
-# Default terminal mode
-# set -g default-terminal 'xterm-256color'
-# set -sa terminal-overrides ',xterm-256color:RGB'
-#set -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color"
-# set -ag terminal-overrides ",xterm-256color:RGB"
-
-set -ga terminal-overrides ",*256col*:Tc"  # 修复 wezterm 无法显示 truecolor
-
-
-#bind -n S-left previous-window
-#bind -n S-right next-window
-
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+# Vim-tmux-navigator 配置
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+# ────────────────────────────────────────────────────────
+# │ Status Bar Style
+# ────────────────────────────────────────────────────────
+set -g status-style fg=white,bg=black
+set -g window-status-current-style fg=green,bg=black,bright
+set -g status-left-length 40
+set -g status-right-length 60
 
+set -g status-left '#[fg=green][#S] '
+set -g status-right '#[fg=yellow]%H:%M #[fg=white]#{b:pane_current_path}'
 
-# ┌───────┐
-# │ Style │
-# └───────┘
+set -g window-status-format "#[fg=white]#I:#W"
+set -g window-status-current-format "#[fg=green]#I:#W"
 
-
-
-# ┌────────┐
-# │ plugin │
-# └────────┘
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-restore 'on'
-set -g @resurrect-capture-pane-contents 'on'
-
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-#set -g @catppuccin_status_modules_right "application session user date_time"
-set -g @catppuccin_status_modules_right "directory date_time session"
-
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M"
-
-set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # increase history size (from 2,000)
-set -g renumber-windows on       # renumber all windows when any window is closed
-set -g set-clipboard on          # use system clipboard
-set -g status-position top       # macOS / darwin style
-
-
-
-run '~/.tmux/plugins/tpm/tpm'
-
-
+# Pane 边框样式
+set -g pane-border-style fg=colour240
+set -g pane-active-border-style fg=green
