--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -51,6 +51,11 @@ bind : command-prompt
 bind x kill-pane
 bind t set status
 
+# 分割窗口
+bind b split-window -v -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind c new-window -c "#{pane_current_path}"
+
 
 # Split
 # unbind f
