--- a/uv/.config/uv/uv.toml
+++ b/uv/.config/uv/uv.toml
@@ -1,3 +1,4 @@
-[tool.uv]
-index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
+[[index]]
+#url = "https://test.pypi.org/simple"
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
